Client app changes:
add packages list and search bar on the home page

set output path for angular app to `wwwroot`

provide a app base url

update typescript package up to 3.1.6

add app-base-href provider

add loading busy indicator

UI style changes on home page

---

Server side changes:

set https mode only for prod environment

switch off a typescript compilation by msbuild

specify `packages` route template  for Search action method

set output path for SPA static files to `wwwroot`

rename unit test methods where we're sending a http request using testserver + minor fixes

--- a/LocalNugetFeed/ClientApp/src/app/home/home.html
+++ b/LocalNugetFeed/ClientApp/src/app/home/home.html
@@ -1,9 +1,27 @@
 <div class="container">
   <div class="row">
-    <nav class="navbar">
-      <div class="col-md-6">
-        <!-- TODO -->
+      <div class="col-md-12 col-sm-12">
+        <input placeholder="Search packages" [(ngModel)]="query" type="text" class="form-control" id="search" #searchRef>
       </div>
-    </nav>
+  </div>
+  <!-- TODO: info with push url -->
+
+  <div class="row">
+    <p style="font-size: 18px;text-align: center" *ngIf="loading">Please wait...</p>
+    <div class="col-md-12" >
+      <div class="thumbnail packages-list" *ngFor="let package of packages">
+        <div class="row">
+          <div class="col-sm-12">
+            <a [routerLink]="['/package', package.id]">
+              <h4>
+                {{package.id}}
+              </h4>
+            </a>
+            <h4><span class="badge badge-secondary">Version: {{package.version}}</span></h4>
+            <h4><span *ngIf="package.authors" class="badge badge-secondary">Authors: {{package.authors}}</span></h4>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
