--- a/LocalNugetFeed/ClientApp/src/app/app.component.html
+++ b/LocalNugetFeed/ClientApp/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-sm-12 body-content">
+    <div class="col-sm-12">
       <h1 class="mx-auto text-center"><span class="badge badge-warning">Local NuGet Feed</span></h1>
 
       <router-outlet></router-outlet>
