client side changes:
add base implementation of package details page

replace APP_BASE_HREF on BASE_URL because there were internal core bugs in angular routing

add service method to get package versions

add packagedependency model

adjust app routes on client side

add href wrapper for the logo on layout page for redirecting to home page

---

server side changes:

adjust action routes by adding the `api` prefix +
fix tests after these changes

--- a/LocalNugetFeed/ClientApp/src/app/app.component.html
+++ b/LocalNugetFeed/ClientApp/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-12">
-      <h1 class="mx-auto text-center"><span class="badge badge-warning">Local NuGet Feed</span></h1>
+      <a [routerLink]="['/']"><h1 class="mx-auto text-center"><span class="badge badge-warning">Local NuGet Feed</span></h1></a>
 
       <router-outlet></router-outlet>
     </div>
