--- a/LocalNugetFeed/ClientApp/src/app/package-details/package-details.html
+++ b/LocalNugetFeed/ClientApp/src/app/package-details/package-details.html
@@ -1,30 +1,34 @@
 <div class="container" *ngIf="package">
-  <div class="row">
-    <div class="card col-md-12 col-sm-12">
-      <div class="card-body">
-        <h1 class="card-title"><span class="badge badge-primary">{{package.id}}</span></h1>
-        <label for="packageVersion"><strong>Available Versions:</strong></label><select id="packageVersion" class="form-control" [(ngModel)]="package" (change)="getPackageInfoByVersion(package)">
-          <option *ngFor="let package of packageVersions" [ngValue]="package">
-            {{package.version}}
-          </option>
-        </select>
-        <label style="margin-top: 15px;" for="dependencies"><strong>Description:</strong></label>
-        <p class="card-text">{{package.description}}</p>
-        <label for="dependencies"><strong>Dependencies:</strong></label>
-        <div id="dependencies" class="thumbnail" *ngFor="let depGroup of package.packageDependencies">
-          <div class="caption" *ngIf="depGroup.targetFramework">
-            <p class="text-justify">{{depGroup.targetFramework}}</p>
-          </div>
-          <ul class="list-group" [hidden]="depGroup.dependencies.length === 0">
-            <li class="list-group-item" *ngFor="let dep of depGroup.dependencies">
-              <p class="card-text">{{dep.id}} v.{{dep.version}}</p>
-            </li>
-          </ul>
-        </div>
-        <label for="dependencies"><strong>Authors:</strong></label>
-        <p class="card-text">{{package.authors}}</p>
+  <a [routerLink]="['/']" class="btn btn-light" >Back</a>
+  <div class="card col-md-12 col-sm-12">
+    <div class="card-body">
+      <h1 class="card-title"><span class="badge badge-primary">{{package.id}}</span></h1>
+      <label for="packageVersion"><strong>Version:</strong></label>
+      <select id="packageVersion"
+              class="form-control"
+              [(ngModel)]="package"
+              (change)="getPackageInfoByVersion(package)">
+        <option *ngFor="let package of packageVersions" [ngValue]="package">
+          {{package.version}}
+        </option>
+      </select>
+      <label style="margin-top: 15px;"><strong>Info:</strong></label>
+      <p class="card-text">{{package.description}}</p>
 
-        <a href="/" class="btn btn-primary" style="margin-top: 15px;">Back</a>
+      <label><strong>Author:</strong></label>
+      <p class="card-text">{{package.authors}}</p>
+      <button class="btn btn-secondary" (click)="showDependencies = !showDependencies">
+        Frameworks and Dependencies
+      </button>
+
+      <div style="margin-top: 15px;" *ngIf="showDependencies">
+        <ul class="list-group" *ngFor="let depGroup of package.packageDependencies">
+          <li style="margin-top: 5px;" class="list-group-item" *ngIf="depGroup.targetFramework"><b>{{depGroup.targetFramework}}</b>
+          </li>
+          <li class="list-group-item" *ngFor="let dep of depGroup.dependencies">
+            <p class="card-text">{{dep.id}} {{dep.version}}</p>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
