remove sending request with empty query to server during the first page loading
minor UI improvements

--- a/LocalNugetFeed/ClientApp/src/app/home/home.html
+++ b/LocalNugetFeed/ClientApp/src/app/home/home.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 col-sm-12">
-      <input placeholder="Search packages" [(ngModel)]="query" type="text" class="form-control" id="search" #searchRef>
+      <input placeholder="Search for packages..." [(ngModel)]="query" type="text" class="form-control" id="search" #searchRef>
     </div>
   </div>
 
